@@ -2,7 +2,10 @@ cryptsetup (2:1.0.2+1.0.3-rc3-2) unstable; urgency=low
 
   * NOT RELEASED YET
 
- -- Jonas Meurer <mejo@debian.org>  Fri, 17 Mar 2006 01:25:41 +0100
+  [ Jonas Meurer ]
+  * add support for a cryptsetup-udeb package
+
+ -- Jonas Meurer <mejo@debian.org>  Tue, 21 Mar 2006 01:32:08 +0100
 
 cryptsetup (2:1.0.2+1.0.3-rc3-1) unstable; urgency=low
 
